# nixos-advisory-survey

./: .gitignore  Cargo.toml  README.md
fixtures/: eval-release.json  maintainers.nix.json  packages.json
fixtures/iterations/1/: maintainers.nixos-18.03.json  maintainers.nixos-18.09.json  maintainers.nixos-unstable.json  vulnix.nixos-18.03.json  vulnix.nixos-18.09.json  vulnix.nixos-unstable.json
fixtures/storepaths/: vm4  vm5  vm9
src/: advisory.rs  branches.rs  count.rs  filter.rs  listpatches.nix  main.rs  maintainers.nix  nix.rs  package.rs  packages-json.nix  packages.rs  scan.rs  source.rs  tests.rs  ticket.rs
src/tracker/: file.rs  github.rs  mod.rs  null.rs
