[package]
name = "survey"
version = "0.8.1-dev"
authors = ["Christian Kauhaus <kc@flyingcircus.io>"]
description = "NixOS advisory survey (used to feed vulnerability roundups)"
keywords = ["security"]
edition = "2018"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = {version = "2", features = ["color", "wrap_help"] }
colored = "1.9"
dotenv = "0.15"
env_logger = "0.7.1"
futures = {version = "0.3.5", features = ["compat"]}
git2 = {version = "0.13", default-features = false }
http = "0.2"
lazy_static = "1.4"
log = "0.4"
ordered-float = "1.0"
rayon = "1.3"
regex = "1"
reqwest = {version = "0.10", features = ["json"]}
serde_json = "1"
serde = {version = "1", features = ["derive"] }
smallstr = {version = "0.2", features = ["serde"] }
smol_str = "0.1.16"
structopt = "0.3"
subprocess = "0.2.4"
tempfile = "3.1"
thiserror = "1.0"
tokio = {version = "0.2.21", features = ["rt-core", "rt-threaded", "process", "blocking"] }

[dev-dependencies]
assert_matches = "1.3"
libflate = "0.1.25"
maplit = "1"
tar = "0.4.25"

[profile.release]
lto = "thin"

[profile.dev]
opt-level = 1
